--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -72,7 +72,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveCylinder.svg&amp;filetimestamp=20191211225841&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveCylinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveCylinder.html" title="PartDesign AdditiveCylinder">P&#345;&iacute;davn&yacute; v&aacute;lec</a>: vytvo&#345;&iacute; p&#345;&iacute;davn&yacute; v&aacute;lec.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveSphere.svg&amp;filetimestamp=20191211230315&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveSphere.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveSphere.html" title="PartDesign AdditiveSphere">P&#345;&iacute;davn&aacute; koule</a>: vytvo&#345;&iacute; p&#345;&iacute;davnou kouli.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveCone.svg&amp;filetimestamp=20191211225758&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveCone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveCone.html" title="PartDesign AdditiveCone">P&#345;&iacute;davn&yacute; ku&#382;el</a>: vytvo&#345;&iacute; p&#345;&iacute;davn&yacute; ku&#382;el.</li></ul></dd></dl>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveEllipsoid.svg&amp;filetimestamp=20191211225913&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveEllipsoid.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveEllipsoid.html" title="PartDesign AdditiveEllipsoid">Additive Ellipsoid</a>: creates an additive ellipsoid.</li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveEllipsoid.svg&amp;filetimestamp=20191211225913&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveEllipsoid.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveEllipsoid.html" title="PartDesign AdditiveEllipsoid">P&#345;&iacute;davn&yacute; elipsoid</a>: vytvo&#345;&iacute; p&#345;&iacute;davn&yacute; elipsoid.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveTorus.svg&amp;filetimestamp=20191211230318&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveTorus.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveTorus.html" title="PartDesign AdditiveTorus">Additive Torus</a>: creates an additive torus.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditivePrism.svg&amp;filetimestamp=20191211230050&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditivePrism.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditivePrism.html" title="PartDesign AdditivePrism">Additive Prism</a>: creates an additive prism.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveWedge.svg&amp;filetimestamp=20191211230344&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveWedge.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveWedge.html" title="PartDesign AdditiveWedge">Additive Wedge</a>: creates an additive wedge.</li></ul></dd></dl>
@@ -187,12 +187,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119210428
+Cached time: 20260119210509
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.254 seconds
-Real time usage: 1.366 seconds
+CPU time usage: 0.242 seconds
+Real time usage: 0.974 seconds
 Preprocessor visited node count: 464/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -203,18 +203,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  167.282      1 -total
- 41.94%   70.152      1 Template:PartDesign_Tools_navi/cs
- 35.72%   59.751      1 Template:Userdocnavi/cs
-  7.64%   12.782      5 Template:VersionPlus
-  6.37%   10.663      1 Template:Version
-  5.86%    9.795      2 Template:Navigation_menu_2
-  3.85%    6.443      2 Template:Docnav
-  3.09%    5.176      1 Template:MenuCommand
-  0.78%    1.298      1 Template:TOCright
+100.00%   97.590      1 -total
+ 27.42%   26.761      1 Template:Userdocnavi/cs
+ 22.51%   21.964      5 Template:VersionPlus
+ 22.46%   21.916      1 Template:PartDesign_Tools_navi/cs
+ 21.44%   20.922      2 Template:Navigation_menu_2
+ 11.72%   11.437      1 Template:Version
+  4.93%    4.815      2 Template:Docnav
+  3.60%    3.513      1 Template:MenuCommand
+  2.23%    2.180      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119210427 and revision id 1741242. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119210508 and revision id 1741244. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
