--- a/wiki/fr/TechDraw_ComplexSection.html
+++ b/wiki/fr/TechDraw_ComplexSection.html
@@ -67,8 +67,8 @@
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
 <ol><li>S&eacute;lectionnez une vue de la pi&egrave;ce et un objet profile dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a> ou l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Les profils sont g&eacute;n&eacute;ralement des esquisses, mais tout objet dont la forme peut &ecirc;tre transform&eacute;e en polyligne fonctionnera.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ComplexSection.svg&amp;filetimestamp=20241124220054&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ComplexSection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer une vue en coupe complexe</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de l'atelier Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ComplexSection.svg&amp;filetimestamp=20241124220054&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ComplexSection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une vue en coupe complexe</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ComplexSection.svg&amp;filetimestamp=20241124220054&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ComplexSection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Vue en coupe complexe</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de l'atelier Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ComplexSection.svg&amp;filetimestamp=20241124220054&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ComplexSection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vue en coupe complexe</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre et vous aide &agrave; calculer les diff&eacute;rentes propri&eacute;t&eacute;s. Des valeurs raisonnables pour la direction de la vue sont calcul&eacute;es, mais elles peuvent &ecirc;tre modifi&eacute;es.</li></ol>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_ComplexSection_Taskview1.png&amp;filetimestamp=20221027145634&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ComplexSection_Taskview1.png" decoding="async" width="333" height="380" class="mw-file-element" data-file-width="356" data-file-height="406"></a></span>
 <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_ComplexSection_Taskview2.png&amp;filetimestamp=20221027145705&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ComplexSection_Taskview2.png" decoding="async" width="299" height="380" class="mw-file-element" data-file-width="343" data-file-height="436"></a></span>
@@ -171,15 +171,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119210637
+Cached time: 20260119210654
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.114 seconds
-Real time usage: 0.361 seconds
+CPU time usage: 0.123 seconds
+Real time usage: 0.217 seconds
 Preprocessor visited node count: 616/1000000
-Post&#8208;expand include size: 28724/2097152 bytes
-Template argument size: 10820/2097152 bytes
+Post&#8208;expand include size: 28698/2097152 bytes
+Template argument size: 10794/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -187,19 +187,19 @@ Unstrip post&#8208;expand size: 4387/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  118.070      1 -total
- 15.87%   18.736      1 Template:TechDraw_Tools_navi/fr
- 15.03%   17.742      1 Template:GuiCommand/fr
- 10.50%   12.398      4 Template:PropertyData
-  8.12%    9.590      1 Template:MenuCommand
-  7.19%    8.484      2 Template:Docnav/fr
-  6.45%    7.615      1 Template:TitleProperty
-  6.38%    7.531      2 Template:Navigation_menu_2
-  6.28%    7.412      1 Template:Code
-  6.10%    7.205      1 Template:Userdocnavi/fr
+100.00%   63.485      1 -total
+ 17.40%   11.046      1 Template:TechDraw_Tools_navi/fr
+ 15.00%    9.523      1 Template:Userdocnavi/fr
+ 14.82%    9.409      2 Template:Navigation_menu_2
+ 11.38%    7.222      4 Template:PropertyData
+  8.03%    5.100      1 Template:GuiCommand/fr
+  7.63%    4.842      1 Template:TitleProperty
+  7.37%    4.678      1 Template:MenuCommand
+  7.21%    4.578      4 Template:Variable
+  6.82%    4.330      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302052-0!canonical and timestamp 20260119210637 and revision id 1741252. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:302052-0!canonical and timestamp 20260119210653 and revision id 1741254. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
