--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -75,7 +75,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveEllipsoid.svg&amp;filetimestamp=20191211225913&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveEllipsoid.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveEllipsoid.html" title="PartDesign AdditiveEllipsoid">P&#345;&iacute;davn&yacute; elipsoid</a>: vytvo&#345;&iacute; p&#345;&iacute;davn&yacute; elipsoid.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveTorus.svg&amp;filetimestamp=20191211230318&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveTorus.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveTorus.html" title="PartDesign AdditiveTorus">P&#345;&iacute;davn&yacute; prstenec</a>: vytvo&#345;&iacute; p&#345;&iacute;davn&yacute; prstenec.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditivePrism.svg&amp;filetimestamp=20191211230050&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditivePrism.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditivePrism.html" title="PartDesign AdditivePrism">P&#345;&iacute;davn&yacute; hranol</a>: vytvo&#345;&iacute; p&#345;&iacute;davn&yacute; hranol.</li></ul></dd></dl>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveWedge.svg&amp;filetimestamp=20191211230344&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveWedge.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveWedge.html" title="PartDesign AdditiveWedge">Additive Wedge</a>: creates an additive wedge.</li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveWedge.svg&amp;filetimestamp=20191211230344&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveWedge.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveWedge.html" title="PartDesign AdditiveWedge">P&#345;&iacute;davn&yacute; kl&iacute;n</a>: vytvo&#345;&iacute; p&#345;&iacute;davn&yacute; kl&iacute;n.</li></ul></dd></dl>
 <h4><span class="mw-headline" id="Subtractive_tools">Subtractive tools</span></h4>
 <p>These are tools for subtracting material from an existing body.
 </p>
@@ -187,12 +187,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119210632
+Cached time: 20260119210703
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.250 seconds
-Real time usage: 0.549 seconds
+CPU time usage: 0.201 seconds
+Real time usage: 0.359 seconds
 Preprocessor visited node count: 464/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -203,18 +203,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.208      1 -total
- 19.88%    7.994      2 Template:Docnav
- 18.98%    7.630      1 Template:Userdocnavi/cs
- 17.09%    6.873      1 Template:PartDesign_Tools_navi/cs
- 14.48%    5.821      1 Template:Version
- 11.85%    4.764      1 Template:TOCright
- 11.75%    4.726      2 Template:Navigation_menu_2
-  7.97%    3.204      1 Template:MenuCommand
-  7.03%    2.827      5 Template:VersionPlus
+100.00%   43.274      1 -total
+ 24.37%   10.548      1 Template:PartDesign_Tools_navi/cs
+ 20.99%    9.081      1 Template:Userdocnavi/cs
+ 16.52%    7.150      1 Template:TOCright
+ 14.41%    6.237      1 Template:MenuCommand
+ 13.23%    5.723      2 Template:Navigation_menu_2
+  9.04%    3.911      5 Template:VersionPlus
+  6.75%    2.922      2 Template:Docnav
+  5.10%    2.209      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119210632 and revision id 1741250. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119210703 and revision id 1741256. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
