--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -76,7 +76,9 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveTorus.svg&amp;filetimestamp=20191211230318&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveTorus.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveTorus.html" title="PartDesign AdditiveTorus">P&#345;&iacute;davn&yacute; prstenec</a>: vytvo&#345;&iacute; p&#345;&iacute;davn&yacute; prstenec.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditivePrism.svg&amp;filetimestamp=20191211230050&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditivePrism.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditivePrism.html" title="PartDesign AdditivePrism">P&#345;&iacute;davn&yacute; hranol</a>: vytvo&#345;&iacute; p&#345;&iacute;davn&yacute; hranol.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveWedge.svg&amp;filetimestamp=20191211230344&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveWedge.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveWedge.html" title="PartDesign AdditiveWedge">P&#345;&iacute;davn&yacute; kl&iacute;n</a>: vytvo&#345;&iacute; p&#345;&iacute;davn&yacute; kl&iacute;n.</li></ul></dd></dl>
-<h4><span class="mw-headline" id="Subtractive_tools">Subtractive tools</span></h4>
+<p><span id="Subtractive_tools"></span>
+</p>
+<h4><span id="Subtraktivn.C3.AD_n.C3.A1stroje"></span><span class="mw-headline" id="Subtraktivn&iacute;_n&aacute;stroje">Subtraktivn&iacute; n&aacute;stroje</span></h4>
 <p>These are tools for subtracting material from an existing body.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Pocket</a>: creates a pocket from a selected sketch.</li></ul>
@@ -187,13 +189,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119210703
+Cached time: 20260119210732
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.201 seconds
-Real time usage: 0.359 seconds
-Preprocessor visited node count: 464/1000000
+CPU time usage: 0.248 seconds
+Real time usage: 0.714 seconds
+Preprocessor visited node count: 465/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -203,18 +205,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.274      1 -total
- 24.37%   10.548      1 Template:PartDesign_Tools_navi/cs
- 20.99%    9.081      1 Template:Userdocnavi/cs
- 16.52%    7.150      1 Template:TOCright
- 14.41%    6.237      1 Template:MenuCommand
- 13.23%    5.723      2 Template:Navigation_menu_2
-  9.04%    3.911      5 Template:VersionPlus
-  6.75%    2.922      2 Template:Docnav
-  5.10%    2.209      1 Template:Version
+100.00%   36.629      1 -total
+ 45.57%   16.690      1 Template:PartDesign_Tools_navi/cs
+ 18.02%    6.601      1 Template:Userdocnavi/cs
+ 12.12%    4.438      2 Template:Navigation_menu_2
+ 11.28%    4.133      5 Template:VersionPlus
+  6.71%    2.457      2 Template:Docnav
+  6.45%    2.363      1 Template:Version
+  5.41%    1.982      1 Template:MenuCommand
+  4.28%    1.569      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119210703 and revision id 1741256. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119210732 and revision id 1741258. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
