--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -79,7 +79,7 @@
 <p><span id="Subtractive_tools"></span>
 </p>
 <h4><span id="Subtraktivn.C3.AD_n.C3.A1stroje"></span><span class="mw-headline" id="Subtraktivn&iacute;_n&aacute;stroje">Subtraktivn&iacute; n&aacute;stroje</span></h4>
-<p>These are tools for subtracting material from an existing body.
+<p>Jedn&aacute; se o n&aacute;stroje pro odstra&#328;ov&aacute;n&iacute; materi&aacute;lu ze st&aacute;vaj&iacute;c&iacute;ho t&#283;lesa.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Pocket</a>: creates a pocket from a selected sketch.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Hole.svg&amp;filetimestamp=20240405093159&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Hole.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Hole.html" title="PartDesign Hole">Hole</a>: creates a hole feature from a selected sketch. The sketch must contain one or multiple circles.</li></ul>
@@ -189,12 +189,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119210732
+Cached time: 20260119210837
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.248 seconds
-Real time usage: 0.714 seconds
+CPU time usage: 0.234 seconds
+Real time usage: 0.361 seconds
 Preprocessor visited node count: 465/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -205,18 +205,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.629      1 -total
- 45.57%   16.690      1 Template:PartDesign_Tools_navi/cs
- 18.02%    6.601      1 Template:Userdocnavi/cs
- 12.12%    4.438      2 Template:Navigation_menu_2
- 11.28%    4.133      5 Template:VersionPlus
-  6.71%    2.457      2 Template:Docnav
-  6.45%    2.363      1 Template:Version
-  5.41%    1.982      1 Template:MenuCommand
-  4.28%    1.569      1 Template:TOCright
+100.00%   31.063      1 -total
+ 34.10%   10.591      1 Template:Userdocnavi/cs
+ 19.67%    6.109      2 Template:Navigation_menu_2
+ 18.51%    5.750      1 Template:PartDesign_Tools_navi/cs
+ 18.01%    5.595      1 Template:Version
+  9.36%    2.909      2 Template:Docnav
+  6.63%    2.058      5 Template:VersionPlus
+  4.92%    1.527      1 Template:TOCright
+  4.89%    1.520      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119210732 and revision id 1741258. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119210837 and revision id 1741260. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
